# FindFace

./: CMakeCache.txt  CMakeLists.txt  ContainerView.cpp  ContainerView.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  LRU.cpp  LRU.h  Makefile  Page.cpp  Page.h  README.md  Server.cpp  Server.h  View.cpp  View.h  cmake_install.cmake  db_template.cpp  db_template.h  main.cpp  runTests  test  test.cpp
API/: FacebookAPI.cpp  FacebookAPI.h  OkAPI.cpp  OkAPI.h  VkAPI.cpp  VkAPI.h
AbstractClasses/: AbstractAPI.h  AbstractRequest.h  (+1 more)
Base/: BaseContainer.cpp  (+7 more)
Google_tests/: API_tests.cpp  CMakeLists.txt  HttpRequest_test.cpp  HttpResponse_test.cpp  LRU_tests.cpp  Server_tests.cpp  page_tests.cpp  view_tests.cpp
Google_tests/lib/: CTestTestfile.cmake  library.json
Google_tests/lib/googlemock/include/gmock/: gmock-actions.h
Google_tests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
Google_tests/lib/googlemock/scripts/generator/cpp/: ast.py
Google_tests/lib/googlemock/src/: gmock-spec-builders.cc
Google_tests/lib/googlemock/test/: gmock-function-mocker_test.cc  gmock-generated-actions_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test_.cc
Google_tests/lib/googletest/include/gtest/: gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h
Google_tests/lib/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
Google_tests/lib/googletest/scripts/: gen_gtest_pred_impl.py
Google_tests/lib/googletest/src/: gtest-filepath.cc
Google_tests/lib/googletest/test/: googletest-catch-exceptions-test_.cc  googletest-death-test-test.cc  googletest-env-var-test.py  googletest-filter-unittest_.cc  googletest-json-outfiles-test.py  googletest-listener-test.cc  googletest-output-test.py  googletest-param-test2-test.cc  googletest-shuffle-test.py  googletest-shuffle-test_.cc  googletest-test2_test.cc  gtest-typed-test_test.cc  gtest_assert_by_exception_test.cc  gtest_environment_test.cc  gtest_help_test.py  gtest_list_output_unittest.py  gtest_main_unittest.cc  gtest_premature_exit_test.cc  gtest_prod_test.cc  gtest_repeat_test.cc  gtest_skip_check_output_test.py  gtest_skip_in_environment_setup_test.cc  gtest_skip_test.cc  gtest_unittest.cc  gtest_xml_outfile2_test_.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest_.cc
Source/DataBase/: CMakeLists.txt
Source/DataBase/Base/: BaseComporator.cpp  BaseComporator.h  BaseContainer.h  BaseDataStructure.cpp  BaseMetrificator.cpp  BaseMetrificator.h  BaseSearchEngine.h
Source/DataBase/KD/: Container.h  DB.cpp  DB.h  DBManager.cpp  DBManager.h  KDTree.cpp  KDTree.h  SearchEngine.cpp  SearchEngine.h
Source/DataBase/Testing/Temporary/: CTestCostData.txt
Source/DataBase/Tests/: ContainerTest.cpp  DBManagerTest.cpp  KDTreeTest.cpp  SearchEngineTest.cpp
Source/DataBase/Tests/GeneratedTests/: nearest_neighbour_data.txt  test_data.txt
Source/DataBase/lib/: test.cpp
Sources/Google_tests/: CMakeLists.txt  FormViewTests.cpp  Google_tests.cbp  ImageViewTests.cpp  Makefile  SecondaryViewTests.cpp  TextViewTests.cpp  ViewTests.cpp  cmake_install.cmake
Sources/Google_tests/googletest/: googletest-distribution.cbp
Sources/Google_tests/googletest/googlemock/: gmock.cbp
Sources/Google_tests/googletest/googlemock/test/: gmock_test_utils.py
Sources/Google_tests/googletest/googletest/: gtest.cbp
Sources/WebCrowler/Google_tests/: CMakeLists.txt
Sources/WebCrowler/Google_tests/lib/: Makefile  cmake_install.cmake
Sources/WebCrowler/Google_tests/lib/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Sources/WebCrowler/Google_tests/lib/googlemock/include/gmock/: gmock-function-mocker.h  gmock-generated-actions.h  gmock-matchers.h  gmock-spec-builders.h
Sources/WebCrowler/Google_tests/lib/googlemock/include/gmock/internal/: gmock-pp.h
Sources/WebCrowler/Google_tests/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-function-mockers_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock_stress_test.cc  gmock_test.cc
Sources/WebCrowler/Google_tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Sources/WebCrowler/Google_tests/lib/googletest/include/gtest/internal/: gtest-type-util.h
Sources/WebCrowler/Google_tests/lib/googletest/samples/: sample2_unittest.cc  sample3_unittest.cc  sample9_unittest.cc
Sources/WebCrowler/Google_tests/lib/googletest/scripts/: release_docs.py
Sources/WebCrowler/Google_tests/lib/googletest/src/: gtest.cc
Sources/WebCrowler/Google_tests/lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-break-on-failure-unittest_.cc  googletest-death-test_ex_test.cc  googletest-env-var-test_.cc  googletest-filepath-test.cc  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-message-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-invalid-name1-test_.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-test-part-test.cc  googletest-throw-on-failure-test.py  gtest-unittest-api_test.cc  gtest_help_test_.cc  gtest_pred_impl_unittest.cc  gtest_sole_header_test.cc  gtest_stress_test.cc  gtest_testbridge_test_.cc  gtest_xml_outfile1_test_.cc  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
Sources/WebServer/: CMakeLists.txt  python_magic.py  requirements.txt
Sources/WebServer/Google_tests/: CMakeLists.txt  HttpRequest_test.cpp  cmake_install.cmake
Sources/WebServer/HttpRequest/: HttpRequest.cpp
Sources/WebServer/HttpResponse/: HttpResponse.cpp
Sources/WebServer/LRU/: LRU.cpp  LRU.h
Sources/WebServer/Server/: Server.h
(+88 files in other folders)
